clusters/talos-robbinsdale/apps/media/transmission-music/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-music
spec:
  selector:
    app: transmission-music
  ports:
  - name: http
    port: 9091
    protocol: TCP
    targetPort: 9091
  type: ClusterIP
