clusters/talos-robbinsdale/apps/media/transmission-music/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission-music
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "transmission-music.rajsingh.info"
    - "transmission-music.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: transmission-music
          port: 9091
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
